Fixes puzzle's css on mobile

--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,6 @@
     #puzzle{
         width: 100vw;
         height: 100vw;
-        background-size: cover;
+        background-size: 100vw 100vw;
     }
 }
